# voice-agent

./: .env.example  .gitignore  Dockerfile  Dockerfile.web  README.md  cloudbuild.web.yaml  gemini-hackathon-plan.html  package-lock.json  package.json
apps/api/: package.json
apps/api/src/: agentTools.test.ts  agentTools.ts  caregiverBriefingAgent.ts  demoData.ts  demoEngine.test.ts  demoEngine.ts  geminiClient.ts  geminiConfig.ts  geminiDecisionAdapter.test.ts  geminiDecisionAdapter.ts  riskEvaluator.test.ts  riskEvaluator.ts  server.ts  stateRepository.test.ts  stateRepository.ts  welfareCheckAgent.ts
apps/web/: index.html  nginx.conf  package.json
apps/web/src/: App.tsx  CallSurface.tsx  adkVoiceClient.ts  api.ts  audioUtils.ts  styles.css
docs/: 01-product-requirements.md  02-architecture.md  03-implementation-plan.md  04-gemini-agent-setup.md  05-contracts.md  06-demo-script.md  07-deployment.md  08-task-dependency-hierarchy.md  09-browser-voice-plan.md  README.md  agent-driven-implementation-plan.md  architecture.md  contracts.md  demo-scenarios.md  deployment.md  finalized-agent-requirements.md  gemini-agent-setup.md
services/adk-voice-agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/adk-voice-agent/app/: __init__.py  agent.py  carevoice_tools.py  config.py  server.py
