[project]
name = "carevoice-adk-voice-agent"
version = "0.1.0"
description = "ADK Live voice agent for CareVoice welfare check-ins"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "google-adk>=1.32.0",
  "httpx>=0.28.0",
  "python-dotenv>=1.0.0",
  "uvicorn[standard]>=0.32.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

